@@ -1,6 +1,7 @@
 2016-10-24 Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Fix STO button tooltip
+	* Do not use gdk_cairo_create with gdk >= 3.22
 
 2016-09-12 Hanna Knutsson <hanna_k@fmgirl.com>
 
